--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^1.6.5",
+		"axios": "^1.7.7",
 		"chromium": "^3.0.3",
 		"cron": "^1.8.2",
 		"dotenv": "^16.3.1",
+		"fs": "^0.0.1-security",
 		"puppeteer": "^15.5.0"
 	}
 }
